# nixopus

./: .env.sample  .gitignore  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  docker-compose-dev.yml  docker-compose-dummy.yaml  docker-compose-staging.yml  docker-compose-test.yml  docker-compose.yml  package-lock.json  package.json  thanks.md  version.txt
cli/: Dockerfile.ubuntu20  Makefile  __init__.py  build.sh  install.sh  perf_check.sh  pyproject.toml
cli/app/: main.py
cli/app/commands/: __init__.py
cli/app/commands/clone/: clone.py  command.py  messages.py
cli/app/commands/conf/: base.py  command.py  conf.py  delete.py  list.py  messages.py  set.py
cli/app/commands/conflict/: command.py  conflict.py  messages.py  models.py
cli/app/commands/install/: admin_registration.py  base.py  command.py  config_schema.py  config_utils.py  deps.py  development.py  environment.py  health.py  messages.py  rollback.py  run.py  services.py  ssh.py  types.py  validate.py
cli/app/commands/preflight/: __init__.py  command.py  deps.py  messages.py  port.py  preflight.py  run.py
cli/app/commands/proxy/: base.py  command.py  (+5 more)
cli/app/utils/: __init__.py  build_constants.py  build_utils.py  config.py  directory_manager.py  file_manager.py  host_information.py  http.py  installation_tracker.py  installation_tracker_messages.py  lib.py  logger.py  message.py  output_formatter.py  parallel_processor.py  protocols.py  retry.py  supported.py  timeout.py
cli/tests/utils/: test_config.py  test_lib.py  test_processor.py  test_timeout.py
(+2147 files in other folders)
