[tool.poetry]
name = "nixopus"
version = "0.1.5"
description = "A CLI for Nixopus"
authors = ["Nixopus <raghavyuva@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.14"
typer = "^0.16.0"
rich = "^14.0.0"
pydantic = "^2.0.0"
packaging = "^23.0"
requests = "^2.32.4"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pytest-watch = "^4.2.0"
flake8 = "^7.3.0"
black = "^25.1.0"
isort = "^6.0.1"
pyinstaller = "^6.14.2"

[tool.poetry.scripts]
nixopus = "app.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=app --cov-report=term-missing"

[tool.black]
line-length = 127
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 127
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
